--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="profile">Profile</string>
     <string name="upcoming">Upcoming</string>
     <string name="past_event">Past Event</string>
+    <string name="searchbar_hint">Search event, categories, location</string>
 </resources>
