--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="upcoming">Upcoming</string>
     <string name="past_event">Past Event</string>
     <string name="searchbar_hint">Search event, categories, location</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Log Out</string>
+    <string name="language">language</string>
+    <string name="dark_mode">dark mode</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="my_post">My Post</string>
 </resources>
