create detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="dark_mode">dark mode</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="my_post">My Post</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="info">Info</string>
+    <string name="map">Map</string>
+    <string name="detail">Detail</string>
+    <string name="save">Save</string>
+    <string name="description">Description</string>
 </resources>
