--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,10 +54,16 @@
     <string name="event_name">Event Name</string>
     <string name="event_description">Description</string>
     <string name="event_location">Location</string>
+    <string name="full_address">Full Address</string>
     <string name="event_date">Date</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
     <string name="event_time">Time</string>
+    <string name="start_time">Start Time</string>
+    <string name="end_time">End Time</string>
     <string name="event_origin_link">Origin Link</string>
     <string name="event_origin_link_example">e.g. social media, website, etc.</string>
+    <string name="next">Next</string>
     <string name="post">post</string>
 
     <!--    Dashboard -->
